--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -5,20 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    tools:context=".activities.NoteControlActivity">
+    tools:context=".activities.NoteDetailActivity">
 
     <include
         layout="@layout/component_main_toolbar"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
         app:layout_constraintTop_toBottomOf="@id/main_toolbar"
         android:hint="@string/title"
-        android:inputType="textMultiLine"
         android:paddingTop="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
@@ -34,16 +33,13 @@
         android:paddingRight="16dp"
         app:layout_constraintTop_toBottomOf="@id/title"/>
 
-    <EditText
+    <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
         app:layout_constraintTop_toBottomOf="@id/date"
         android:hint="@string/description"
-        android:inputType="textMultiLine"
-        android:gravity="start"
-        android:lines="20"
         android:textSize="16sp"
         android:paddingTop="16dp"
         android:paddingLeft="16dp"
