--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:padding="8dp"
@@ -11,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="28sp"
+        app:layout_constraintTop_toTopOf="parent"
         android:text="@string/title"/>
 
     <TextView
@@ -18,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/item_title"
         android:layout_marginTop="4dp"/>
 
     <TextView
@@ -27,6 +31,16 @@
         android:textSize="16sp"
         android:layout_marginTop="8dp"
         android:text="@string/description"
+        app:layout_constraintTop_toBottomOf="@id/item_date"
         android:textColor="@color/colorBlueGrey"/>
 
-</LinearLayout>
+    <View
+        android:id="@+id/item_selected"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="8dp"
+        android:visibility="gone"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
